refactor: general cleanup